Corrección del manejo de sesiones y agregado de la política de creación de sesiones
- Solucionado el problema con la autenticación anónima al configurar correctamente el manejo de sesiones.
- Añadida la política de creación de sesiones 'SessionCreationPolicy.IF_REQUIRED' para evitar la creación innecesaria de sesiones.
- Configurada la URL para sesiones inválidas, redirigiendo a '/login?invalid-session=true.